# Node-Image-Manipulator

./: CMakeLists.txt  NodeManager.cpp  NodeManager.h  README.md  canvaswidget.cpp  canvaswidget.h  image_processor.cpp  image_processor.h  main  main.cpp  mainwindow.cpp  mainwindow.h  node.cpp  node.h  node_property.h
